spring-kafka/deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aincrad
  name: spring-kafka
  labels:
    app: spring-kafka
spec:
  selector:
    app: spring-kafka
  ports:
    - name: http
      port: 80
      targetPort: 58094
