spring-kafka/deploy/dev/ingress.tb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aincrad
  name: spring-kafka
spec:
  tls:
    - hosts:
        - host-kafka
      secretName: host-kafka
  rules:
    - host: host-kafka.tb
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-kafka
                port:
                  number: 80
    - host: host-kafka
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-kafka
                port:
                  number: 80
